Fix vertical scrollbar always visible in IE/Edge

--- a/admin/assets/css/admin.css
+++ b/admin/assets/css/admin.css
@@ -1956,7 +1956,7 @@ label {
   display: block; }
 
 .sidebar-wrapper {
-  overflow-y: scroll;
+  overflow-y: auto;
   height: calc(100% - 9rem); }
 
 .toggle-navigation {
